jsdialog: expander elements: fix alignment of options button
complementary to the following PR:
browser: accessibility: add 'aria-expanded' attribute to expander
label #10996

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -380,6 +380,13 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 	border: none;
 }
 
+.ui-expander.jsdialog:not(.sidebar) {
+	width: 100%;
+	text-align: left;
+	font-size: 14px;
+	padding-bottom: 4px;
+}
+
 #options.ui-expander {
 	margin-top: 8px;
 }
